creato la struttura delle card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-
+        <div class="products clearfix">
+            <div class="product">
+                <img src="./img/1.webp" alt="Uomo con una maglietta bianca
+                    logato Levi's in rosso sul petto">
+                <div class="tag">
+                    <div class="discount">
+                        -50%
+                    </div>
+                    <div class="eco">
+                        Sostenibilità
+                    </div>
+                </div>
+                <div class="heart">&heartsuit;</div>
+            </div>
+        </div>
     </body>
 </html>
