Added item name and price and put css effects

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div class="products clearfix">
-            <div class="product">
+        <div class="products">
+            <div class="product clearfix">
                 <img src="./img/1.webp" alt="Uomo con una maglietta bianca
                     logato Levi's in rosso sul petto">
                 <div class="tag">
@@ -21,7 +21,18 @@
                     </div>
                 </div>
                 <div class="heart">&heartsuit;</div>
+                <ul class="item_info">
+                    <li class="brand">Levi's</li>
+                    <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                    <li class="price">
+                        <span class="discounted">
+                            14,99 &euro;
+                        </span>
+                        <span class="original">
+                            29,99 &euro;
+                        </span>
+                    </li>
+                </ul>
             </div>
-        </div>
-    </body>
-</html>
+        </body>
+    </html>
