Redid HTML structure using past structure and css

--- a/index.html
+++ b/index.html
@@ -6,33 +6,192 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boolzando</title>
         <link rel="stylesheet" href="./style.css">
+
     </head>
-    <body>
-        <div class="products">
-            <div class="product clearfix">
-                <img src="./img/1.webp" alt="Uomo con una maglietta bianca
-                    logato Levi's in rosso sul petto">
-                <div class="tag">
-                    <div class="discount">
-                        -50%
+    <body class="debug">
+
+        <main class="article">
+
+            <section class="article-column clearfix">
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                            con
+                            logo Levi's scritta in rosso sul petto">
+                        <div class="tag">
+                            <div class="discount">
+                                -50%
+                            </div>
+                            <div class="eco">
+                                Sostenibilità
+                            </div>
+                        </div>
                     </div>
-                    <div class="eco">
-                        Sostenibilità
-                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Levi's</li>
+                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="price">
+                            <span class="discounted">
+                                14,99 &euro;
+                            </span>
+                            <span class="original">
+                                29,99 &euro;
+                            </span>
+                        </li>
+                    </ul>
                 </div>
-                <div class="heart">&heartsuit;</div>
-                <ul class="item_info">
-                    <li class="brand">Levi's</li>
-                    <li class="item_name">RELAXED FIT TEE UNISEX</li>
-                    <li class="price">
-                        <span class="discounted">
-                            14,99 &euro;
-                        </span>
-                        <span class="original">
-                            29,99 &euro;
-                        </span>
-                    </li>
-                </ul>
-            </div>
-        </body>
-    </html>
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                            con
+                            logo Levi's scritta in rosso sul petto">
+                        <div class="tag">
+                            <div class="discount">
+                                -50%
+                            </div>
+                            <div class="eco">
+                                Sostenibilità
+                            </div>
+                        </div>
+                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Levi's</li>
+                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="price">
+                            <span class="discounted">
+                                14,99 &euro;
+                            </span>
+                            <span class="original">
+                                29,99 &euro;
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                            con
+                            logo Levi's scritta in rosso sul petto">
+                        <div class="tag">
+                            <div class="discount">
+                                -50%
+                            </div>
+                            <div class="eco">
+                                Sostenibilità
+                            </div>
+                        </div>
+                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Levi's</li>
+                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="price">
+                            <span class="discounted">
+                                14,99 &euro;
+                            </span>
+                            <span class="original">
+                                29,99 &euro;
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                            con
+                            logo Levi's scritta in rosso sul petto">
+                        <div class="tag">
+                            <div class="discount">
+                                -50%
+                            </div>
+                            <div class="eco">
+                                Sostenibilità
+                            </div>
+                        </div>
+                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Levi's</li>
+                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="price">
+                            <span class="discounted">
+                                14,99 &euro;
+                            </span>
+                            <span class="original">
+                                29,99 &euro;
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                            con
+                            logo Levi's scritta in rosso sul petto">
+                        <div class="tag">
+                            <div class="discount">
+                                -50%
+                            </div>
+                            <div class="eco">
+                                Sostenibilità
+                            </div>
+                        </div>
+                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Levi's</li>
+                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="price">
+                            <span class="discounted">
+                                14,99 &euro;
+                            </span>
+                            <span class="original">
+                                29,99 &euro;
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                            con
+                            logo Levi's scritta in rosso sul petto">
+                        <div class="tag">
+                            <div class="discount">
+                                -50%
+                            </div>
+                            <div class="eco">
+                                Sostenibilità
+                            </div>
+                        </div>
+                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Levi's</li>
+                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="price">
+                            <span class="discounted">
+                                14,99 &euro;
+                            </span>
+                            <span class="original">
+                                29,99 &euro;
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- /article-column -->
+
+        </main>
+        <!-- /.article -->
+    </body>
+</html>
