Finish 1st page
Completato la prima parte usando float e position

--- a/index.html
+++ b/index.html
@@ -45,55 +45,21 @@
 
                 <div class="column-left">
                     <div class="img_container">
-                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
-                            con
-                            logo Levi's scritta in rosso sul petto">
+                        <img src="./img/2.webp" alt="Ragazza con una maglietta
+                            bianca logato GUESS con digegno di fiori">
                         <div class="tag">
                             <div class="discount">
-                                -50%
-                            </div>
-                            <div class="eco">
-                                Sostenibilità
+                                -30%
                             </div>
                         </div>
                     </div>
                     <div id="heart">&heartsuit;</div>
                     <ul class="item_info">
-                        <li class="brand">Levi's</li>
-                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="brand">GUESS</li>
+                        <li class="item_name">ROSES TEE</li>
                         <li class="price">
                             <span class="discounted">
-                                14,99 &euro;
-                            </span>
-                            <span class="original">
-                                29,99 &euro;
-                            </span>
-                        </li>
-                    </ul>
-                </div>
-
-
-                <div class="column-left">
-                    <div class="img_container">
-                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
-                            con
-                            logo Levi's scritta in rosso sul petto">
-                        <div class="tag">
-                            <div class="discount">
-                                -50%
-                            </div>
-                            <div class="eco">
-                                Sostenibilità
-                            </div>
-                        </div>
-                    </div>
-                    <div id="heart">&heartsuit;</div>
-                    <ul class="item_info">
-                        <li class="brand">Levi's</li>
-                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
-                        <li class="price">
-                            <span class="discounted">
-                                14,99 &euro;
+                                20,99 &euro;
                             </span>
                             <span class="original">
                                 29,99 &euro;
@@ -104,7 +70,31 @@
 
                 <div class="column-left">
                     <div class="img_container">
-                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
+                        <img src="./img/3.webp" alt="Ragazza seduta per terra
+                            con completo verde">
+                        <div class="tag">
+                            <div class="discount">
+                                -30%
+                            </div>
+                        </div>
+                    </div>
+                    <div id="heart">&heartsuit;</div>
+                    <ul class="item_info">
+                        <li class="brand">Come Zucchero Filato</li>
+                        <li class="item_name">Voglia di colori pastello</li>
+                        <li class="price">
+                            <span class="discounted">
+                                129,99 &euro;
+                            </span>
+                            <span class="original">
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column-left">
+                    <div class="img_container">
+                        <img src="./img/4.webp" alt="Uomo con maglietta bianca
                             con
                             logo Levi's scritta in rosso sul petto">
                         <div class="tag">
@@ -119,7 +109,7 @@
                     <div id="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Levi's</li>
-                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="item_name">TEE UNISEX</li>
                         <li class="price">
                             <span class="discounted">
                                 14,99 &euro;
@@ -133,28 +123,16 @@
 
                 <div class="column-left">
                     <div class="img_container">
-                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
-                            con
-                            logo Levi's scritta in rosso sul petto">
-                        <div class="tag">
-                            <div class="discount">
-                                -50%
-                            </div>
-                            <div class="eco">
-                                Sostenibilità
-                            </div>
-                        </div>
+                        <img src="./img/5.webp" alt="Ragazza in una vestaglia
+                            lunga di color rame">
                     </div>
                     <div id="heart">&heartsuit;</div>
                     <ul class="item_info">
-                        <li class="brand">Levi's</li>
-                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="brand">Maya Deluxe</li>
+                        <li class="item_name">Stripe Bodice</li>
                         <li class="price">
                             <span class="discounted">
-                                14,99 &euro;
-                            </span>
-                            <span class="original">
-                                29,99 &euro;
+                                99,99 &euro;
                             </span>
                         </li>
                     </ul>
@@ -162,13 +140,9 @@
 
                 <div class="column-left">
                     <div class="img_container">
-                        <img src="./img/1.webp" alt="Uomo con maglietta bianca
-                            con
-                            logo Levi's scritta in rosso sul petto">
+                        <img src="./img/6.webp" alt="Ragazza con capelli ricci
+                            con una maglietta lunga nera e gonna marrone">
                         <div class="tag">
-                            <div class="discount">
-                                -50%
-                            </div>
                             <div class="eco">
                                 Sostenibilità
                             </div>
@@ -176,13 +150,10 @@
                     </div>
                     <div id="heart">&heartsuit;</div>
                     <ul class="item_info">
-                        <li class="brand">Levi's</li>
-                        <li class="item_name">RELAXED FIT TEE UNISEX</li>
+                        <li class="brand">Esprit</li>
+                        <li class="item_name">Maglione - Black</li>
                         <li class="price">
                             <span class="discounted">
-                                14,99 &euro;
-                            </span>
-                            <span class="original">
                                 29,99 &euro;
                             </span>
                         </li>
