Add hover effects with translate and display none

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <img src="./img/1.webp" alt="Uomo con maglietta bianca
                             con
                             logo Levi's scritta in rosso sul petto">
+                        <img src="./img/1b.webp" class="img_top" alt="">
                         <div class="tag">
                             <div class="discount">
                                 -50%
@@ -45,6 +46,7 @@
 
                 <div class="column-left">
                     <div class="img_container">
+                        <img src="./img/2b.webp" class="img_top" alt="">
                         <img src="./img/2.webp" alt="Ragazza con una maglietta
                             bianca logato GUESS con digegno di fiori">
                         <div class="tag">
@@ -70,6 +72,7 @@
 
                 <div class="column-left">
                     <div class="img_container">
+                        <img src="./img/3b.webp" class="img_top" alt="">
                         <img src="./img/3.webp" alt="Ragazza seduta per terra
                             con completo verde">
                         <div class="tag">
@@ -94,6 +97,7 @@
 
                 <div class="column-left">
                     <div class="img_container">
+                        <img src="./img/4b.webp" class="img_top" alt="">
                         <img src="./img/4.webp" alt="Uomo con maglietta bianca
                             con
                             logo Levi's scritta in rosso sul petto">
@@ -123,6 +127,7 @@
 
                 <div class="column-left">
                     <div class="img_container">
+                        <img src="./img/5b.webp" class="img_top" alt="">
                         <img src="./img/5.webp" alt="Ragazza in una vestaglia
                             lunga di color rame">
                     </div>
@@ -140,6 +145,7 @@
 
                 <div class="column-left">
                     <div class="img_container">
+                        <img src="./img/6b.webp" class="img_top" alt="">
                         <img src="./img/6.webp" alt="Ragazza con capelli ricci
                             con una maglietta lunga nera e gonna marrone">
                         <div class="tag">
