Validated and found duplicate ID, changed to class

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="heart">&heartsuit;</div>
+                    <div class="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">GUESS</li>
                         <li class="item_name">ROSES TEE</li>
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="heart">&heartsuit;</div>
+                    <div class="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Come Zucchero Filato</li>
                         <li class="item_name">Voglia di colori pastello</li>
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="heart">&heartsuit;</div>
+                    <div id="class">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Levi's</li>
                         <li class="item_name">TEE UNISEX</li>
@@ -131,7 +131,7 @@
                         <img src="./img/5.webp" alt="Ragazza in una vestaglia
                             lunga di color rame">
                     </div>
-                    <div id="heart">&heartsuit;</div>
+                    <div class="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Maya Deluxe</li>
                         <li class="item_name">Stripe Bodice</li>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="heart">&heartsuit;</div>
+                    <div class="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Esprit</li>
                         <li class="item_name">Maglione - Black</li>
