checked for typos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="heart">&heartsuit;</div>
+                    <div class="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Levi's</li>
                         <li class="item_name">RELAXED FIT TEE UNISEX</li>
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="class">&heartsuit;</div>
+                    <div class="heart">&heartsuit;</div>
                     <ul class="item_info">
                         <li class="brand">Levi's</li>
                         <li class="item_name">TEE UNISEX</li>
